fix: css align 2

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
   justify-content: center;
   align-items: center;
   display: flex;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 1500px;
 
 }
